--- a/parser/DecafCodeGenerator/.editorconfig
+++ b/parser/DecafCodeGenerator/.editorconfig
@@ -3,3 +3,9 @@ charset = utf-8
 end_of_line = lf
 indent_size = 2
 indent_style = space
+
+[*.{h,hpp,c,cpp,rc}]
+charset = utf-8
+end_of_line = lf
+indent_size = 4
+indent_style = space
