--- a/parser/DecafCodeGenerator/src/CMakeLists.txt
+++ b/parser/DecafCodeGenerator/src/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.14)
 
+set(CMAKE_C_COMPILER clang)
+set(CMAKE_CXX_COMPILER clang++)
 find_package(Threads)
 find_package(LLVM REQUIRED CONFIG)
 
